# Spotlightr

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  parse_test
.github/workflows/: release.yml
.serena/: project.yml
src/: App.css  App.tsx  ThemeContext.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_db  test_db.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: applescript.rs  editor.rs  lib.rs  main.rs  vscode.rs  workspace.rs
src/components/Modal/: SearchModal.tsx  SettingsModal.tsx  WorkspaceModal.tsx
src/components/QuickActions/: QuickActions.css  QuickActions.tsx
src/components/WorkspaceTile/: SortableWorkspaceTile.tsx  WorkspaceTile.tsx
src/hooks/: useSettings.ts  useWindowLayout.ts  useWorkspaces.ts
src/types/: index.ts
